--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "gray-matter": "^4.0.3",
     "next": "13.4.10",
     "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
